
namespace Player
{
    public static class AnimatorVar
    {
        public const string IS_CLIMBING = "IsClimbing";
        public const string IS_WALKING = "IsWalking";
        public const string IS_GROUNDED = "IsGrounded";
        public const string HAS_DIED = "HasDied";
        public const string PLAYER_DEATH = "Player_Death";
    }
}